# CRED-OOP-Master

./: .gitignore  CMakeLists.txt  PROJECT_FILES_INSTRUCTIONS.md  README.md  build
src/: runner.cpp
src/include/models/: File.cpp  File.hpp  FileSystemItem.cpp  FileSystemItem.hpp  Folder.cpp  Folder.hpp
src/include/service/: FileSystemManager.hpp  FileSystemManagerImpl.cpp  FileSystemManagerImpl.hpp
test/: CMakeLists.txt  test_file_system_manager.cpp
